--- a/.shrc
+++ b/.shrc
@@ -71,11 +71,17 @@ else
 	GIT='/usr/bin/git'
 	CURL='/usr/bin/curl'
 
+	if [ -x '/opt/local/bin/doas' ]; then
+		alias sudo='/opt/local/bin/doas'
+	else
+		alias doas='/usr/bin/sudo'
+	fi
+
 	alias cdd="cd ${HOME}/src"
 	alias t='/opt/homebrew/bin/terraform'
 	alias k='/opt/homebrew/bin/kubectl'
 	alias ldd='/usr/bin/otool -L'
-	alias doas='/usr/bin/sudo'
+	alias ips='for i in $(networksetup -listallhardwareports | sed -rn "s/.*Device:[[:space:]]+//p"); do ip=$(ipconfig getifaddr "${i}"); test -z "${ip}" || echo "${i}: ${ip}"; done'
 fi
 
 #alias l='/bin/ls -lGp'
