[darwin] Update ips alias to get DNS servers list from /etc/resolv.conf, not from `networksetup -getdnsservers`

--- a/.shrc
+++ b/.shrc
@@ -94,7 +94,7 @@ elif [ "${OSTYPE}" != "${OSTYPE#darwin}" ]; then
 		rtr=$(netstat -rnfinet | awk "\$1 == \"default\" && \$4 == \"${ss}\" {
 			printf(\" >> %s%s\n\", \$2, index(\$3, \"I\") > 0 ? \"\" : \" (*)\")
 		}")
-		for i in $(networksetup -getdnsservers "${name}"); do
+		for i in $(sed -rn "s/^[[:space:]]*nameserver[[:space:]]+([^[:space:]]+).*/\1/p" /etc/resolv.conf); do
 			dns="${dns}${dns:+,}${i}"
 		done
 		echo "${ss}: ${hw:+${hw} }${ip} (${name})${rtr}${dns:+ DNS:${dns}}"
