--- a/.shrc
+++ b/.shrc
@@ -69,6 +69,7 @@ elif [ "${OSTYPE}" != "${OSTYPE#darwin}" ]; then
 	PREFIX='/opt/homebrew'
 	GIT='/usr/bin/git'
 	CURL='/usr/bin/curl'
+	export LANG='en_GB.UTF-8'
 
 	if [ -x '/opt/local/bin/doas' ]; then
 		alias sudo='/opt/local/bin/doas'
