--- a/.shrc
+++ b/.shrc
@@ -23,7 +23,7 @@ alias ..='cd ..'
 alias cd..='cd ..'
 alias n32='/usr/bin/nice -n32'
 
-alias pi='/sbin/ping'
+alias pi='/sbin/ping -n -c5 -s0 8.8.8.8'
 alias trace='/usr/sbin/traceroute -q1 -n'
 
 if [ "${OSTYPE}" != "${OSTYPE#freebsd}" ]; then
@@ -78,6 +78,17 @@ elif [ "${OSTYPE}" != "${OSTYPE#darwin}" ]; then
 		alias doas='/usr/bin/sudo'
 		alias sd='/usr/bin/sudo /opt/local/bin/mc'
 	fi
+
+	JAVA_HOME="${PREFIX}/opt/java"
+	test -x "${JAVA_HOME}/bin/java" && export JAVA_HOME &&
+		export PATH="${PATH%%:/usr/bin:*}:${JAVA_HOME}/bin:/usr/bin:${PATH##*:/usr/bin:}"
+
+	# Atlassian Command Line Interface (CLI)
+	# https://marketplace.atlassian.com/apps/10886/atlassian-command-line-interface-cli
+	test -x "${HOME}/ACLI/acli" && export COLUMNS='120' # && export PATH="${PATH}:${HOME}/ACLI"
+
+	GROOVY_HOME="${PREFIX}/opt/groovy/libexec"
+	test -x "${GROOVY_HOME}/bin/groovy" && export GROOVY_HOME
 
 	alias cdd="cd ${HOME}/src"
 	alias k='/opt/homebrew/bin/kubectl'
