--- a/.shrc
+++ b/.shrc
@@ -8,7 +8,7 @@
 # see also sh(1), environ(7).
 #
 
-echo '.shrc' >&2
+test -n "${O1VM_SUPRESS_SHRC_LOGGING}" || echo '.shrc' >&2
 
 # Uncomment next line to enable the builtin emacs(1) command line editor
 # in sh(1), e.g. C-a -> beginning-of-line.
