--- a/.shrc
+++ b/.shrc
@@ -17,8 +17,6 @@ set -o emacs
 # some useful aliases
 alias h='fc -l'
 alias j='jobs'
-alias m='/usr/bin/less --no-init --chop-long-lines --RAW-CONTROL-CHARS'
-
 alias ..='cd ..'
 alias cd..='cd ..'
 alias n32='/usr/bin/nice -n32'
@@ -123,8 +121,15 @@ elif [ "${OSTYPE}" != "${OSTYPE#linux}" ]; then
 	alias sd='/usr/bin/sudo /usr/bin/mc'
 fi
 
-#alias l='/bin/ls -lGp'
+alias m='/usr/bin/less --no-init --chop-long-lines --RAW-CONTROL-CHARS'
+if [ -x "${PREFIX}/bin/bat" ]; then
+	export BAT_PAGER='/usr/bin/less --no-init --chop-long-lines --RAW-CONTROL-CHARS'
+	alias m="${PREFIX}/bin/bat --plain --wrap never"
+	alias cat="/usr/bin/env BAT_PAGER='${BAT_PAGER} --quit-if-one-screen' ${PREFIX}/bin/bat --plain"
+fi
+
 alias l="${PREFIX}/bin/exa --long --group-directories-first --bytes"
+test -x "${PREFIX}/bin/exa" || alias l='/bin/ls -lGp'
 
 alias tmux="${PREFIX}/bin/tmux attach || ${PREFIX}/bin/tmux new"
 alias weather="${CURL} http://wttr.in/Vyshhorod"
@@ -133,7 +138,7 @@ alias giadd="${GIT} add"
 alias gibra="${GIT} branch --show-current"
 alias gibras="/usr/bin/env GIT_PAGER='${GIT_PAGER:-${PAGER:-/usr/bin/less}} --quit-if-one-screen' ${GIT} branch --verbose --all"
 alias giche="${GIT} checkout"
-alias gichema="${GIT}"' checkout $('"${GIT}"' branch --remotes --list "origin/ma*" | sed -rn "s,^[[:space:]]*origin/(master|main)$,\1,p;q")'
+alias gichem="${GIT}"' checkout $('"${GIT}"' branch --remotes --list "origin/ma*" | sed -rn "s,^[[:space:]]*origin/(master|main)$,\1,p;q")'
 alias gicam="${GIT} commit --verbose --all --message"
 alias gigog="${GIT}"' log --graph --abbrev-commit --decorate --all --format=format:"%C(bold blue)%H%C(reset) - %C(bold cyan)%aD%C(dim white) - %an%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n %C(white)%s%C(reset)"'
 alias gilog="${GIT}"' log --graph --pretty=format:"%C(bold blue)%h%C(dim white) [%C(bold cyan)%ai%C(dim white)] <%C(bold green)%ae%C(dim white)>%C(bold yellow)%d%C(reset) %s"'
@@ -193,6 +198,11 @@ gibradel() {
 	done
 }
 
+gicd() {
+	local d
+	d=$(${GIT} rev-parse --show-toplevel) && cd "${d}"
+}
+
 pkg_ls_bin() {
 	# можно дополнить автоматическим определением директории порта по /usr/ports/* при пустом ${1}
 	local pkgs
@@ -200,10 +210,14 @@ pkg_ls_bin() {
 	/usr/bin/env LC_TIME='en_US.UTF-8' /bin/ls -lSG $(${PREFIX}/sbin/pkg-static query '%Fp' ${pkgs} | /usr/bin/xargs /usr/bin/file | /usr/bin/sed -rn 's/([^:]+):[[:space:]]+ELF[[:space:]].*/\1/p') #'
 }
 
-#alias ll='/bin/ls -laGTop'
+
 ll() {
-	"${PREFIX}/bin/exa" --all --long --group-directories-first --bytes --links --time-style long-iso --color always ${*} |
-		/usr/bin/less --no-init --chop-long-lines --RAW-CONTROL-CHARS --quit-if-one-screen
+	if [ -x "${PREFIX}/bin/exa" ]; then
+		"${PREFIX}/bin/exa" --all --long --group-directories-first --bytes --links --time-style long-iso --color always ${*} |
+			/usr/bin/less --no-init --chop-long-lines --RAW-CONTROL-CHARS --quit-if-one-screen
+	else
+		/bin/ls -laGTop ${*}
+	fi
 }
 
 i() {
